--- a/project tfidf.ipynb
+++ b/project tfidf.ipynb
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "confusion_matrix(y_test, y_predicted_counts) dfdf"
+    "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
@@ -804,9 +804,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fitting 3 folds for each of 72 candidates, totalling 216 fits\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 130 tasks      | elapsed:    9.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 216 out of 216 | elapsed:   16.8s finished\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = {\n",
     "    'bootstrap': [True, False],\n",
@@ -828,43 +840,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'bootstrap': False,\n",
+       " 'max_depth': 75,\n",
+       " 'max_features': 'auto',\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'n_estimators': 60}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
    "source": [
     "grid_search.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.9258111080757877"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
    "source": [
     "grid_search.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.874, precision = 0.877, recall = 0.874, f1 = 0.842\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"accuracy = %.3f, precision = %.3f, recall = %.3f, f1 = %.3f\" % (accuracy, precision, recall, f1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 35, 108],\n",
+       "       [  4, 740]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,9 +932,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.843, precision = 0.868, recall = 0.843, f1 = 0.776\n"
+     ]
+    }
+   ],
    "source": [
     "nb.fit(X_train_counts, y_train)\n",
     "\n",
@@ -887,16 +954,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[  4, 139],\n",
+       "       [  0, 744]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
