--- a/project smote.ipynb
+++ b/project smote.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from imblearn.over_sampling import SMOTE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -595,66 +596,66 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Counter({1: 2252, 0: 2252})\n"
+     ]
+    }
+   ],
    "source": [
     "smote = SMOTE()\n",
     "\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(data['text'], data['feelings'])\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data['text'], data['feelings'])\n",
     "\n",
-    "# count_vectorizer = CountVectorizer()\n",
+    "count_vectorizer = CountVectorizer()\n",
     "\n",
-    "# X_train_counts = count_vectorizer.fit_transform(X_train)\n",
-    "# X_test_counts = count_vectorizer.transform(X_test)"
+    "X_train_counts = count_vectorizer.fit_transform(X_train)\n",
+    "X_test_counts = count_vectorizer.transform(X_test)\n",
+    "\n",
+    "X_train_counts, y_train = smote.fit_sample(X_train_counts, y_train)\n",
+    "\n",
+    "print(Counter(y_train))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'X_train_counts' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-e616a1cd39dc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m16\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m16\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0mplot_LSA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'X_train_counts' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Straight up stolen code, tweak to needs later or discard because it's useless\n",
     "# Haven't bothered changing labels because the graph isn't useful for our purposes\n",
     "\n",
-    "from sklearn.decomposition import PCA, TruncatedSVD\n",
-    "import matplotlib\n",
-    "import matplotlib.patches as mpatches\n",
+    "# from sklearn.decomposition import PCA, TruncatedSVD\n",
+    "# import matplotlib\n",
+    "# import matplotlib.patches as mpatches\n",
     "\n",
     "\n",
-    "def plot_LSA(test_data, test_labels, savepath=\"PCA_demo.csv\", plot=True):\n",
-    "        lsa = TruncatedSVD(n_components=2)\n",
-    "        lsa.fit(test_data)\n",
-    "        lsa_scores = lsa.transform(test_data)\n",
-    "        color_mapper = {label:idx for idx,label in enumerate(set(test_labels))}\n",
-    "        color_column = [color_mapper[label] for label in test_labels]\n",
-    "        colors = ['orange','blue','blue']\n",
-    "        if plot:\n",
-    "            plt.scatter(lsa_scores[:,0], lsa_scores[:,1], s=8, alpha=.8, c=test_labels, cmap=matplotlib.colors.ListedColormap(colors))\n",
-    "            red_patch = mpatches.Patch(color='orange', label='Irrelevant')\n",
-    "            green_patch = mpatches.Patch(color='blue', label='Disaster')\n",
-    "            plt.legend(handles=[red_patch, green_patch], prop={'size': 30})\n",
+    "# def plot_LSA(test_data, test_labels, savepath=\"PCA_demo.csv\", plot=True):\n",
+    "#         lsa = TruncatedSVD(n_components=2)\n",
+    "#         lsa.fit(test_data)\n",
+    "#         lsa_scores = lsa.transform(test_data)\n",
+    "#         color_mapper = {label:idx for idx,label in enumerate(set(test_labels))}\n",
+    "#         color_column = [color_mapper[label] for label in test_labels]\n",
+    "#         colors = ['orange','blue','blue']\n",
+    "#         if plot:\n",
+    "#             plt.scatter(lsa_scores[:,0], lsa_scores[:,1], s=8, alpha=.8, c=test_labels, cmap=matplotlib.colors.ListedColormap(colors))\n",
+    "#             red_patch = mpatches.Patch(color='orange', label='Irrelevant')\n",
+    "#             green_patch = mpatches.Patch(color='blue', label='Disaster')\n",
+    "#             plt.legend(handles=[red_patch, green_patch], prop={'size': 30})\n",
     "\n",
     "\n",
-    "fig = plt.figure(figsize=(16, 16))          \n",
-    "plot_LSA(X_train_counts, y_train)\n",
-    "plt.show()"
+    "# fig = plt.figure(figsize=(16, 16))          \n",
+    "# plot_LSA(X_train_counts, y_train)\n",
+    "# plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,9 +670,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.821, precision = 0.820, recall = 0.821, f1 = 0.821\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -696,18 +705,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 81,  80],\n",
+       "       [ 79, 647]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.811, precision = 0.814, recall = 0.811, f1 = 0.812\n"
+     ]
+    }
+   ],
    "source": [
     "rf = RandomForestClassifier()\n",
     "rf.fit(X_train_counts, y_train)\n",
@@ -720,27 +749,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 81,  80],\n",
+       "       [ 88, 638]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'auto',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_impurity_split': None,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
    "source": [
     "rf.get_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fitting 3 folds for each of 180 candidates, totalling 540 fits\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    3.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 130 tasks      | elapsed:   11.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 333 tasks      | elapsed:   27.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 540 out of 540 | elapsed:   46.8s finished\n"
+     ]
+    }
+   ],
    "source": [
     "param_grid = {\n",
     "    'bootstrap': [True, False],\n",
@@ -762,43 +845,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'bootstrap': False,\n",
+       " 'max_depth': 100,\n",
+       " 'max_features': 'auto',\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 4,\n",
+       " 'n_estimators': 60}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
    "source": [
     "grid_search.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.9063994191459228"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
    "source": [
     "grid_search.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.825, precision = 0.811, recall = 0.825, f1 = 0.817\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"accuracy = %.3f, precision = %.3f, recall = %.3f, f1 = %.3f\" % (accuracy, precision, recall, f1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 66,  95],\n",
+       "       [ 60, 666]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,9 +937,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "accuracy = 0.822, precision = 0.814, recall = 0.822, f1 = 0.817\n"
+     ]
+    }
+   ],
    "source": [
     "nb.fit(X_train_counts, y_train)\n",
     "\n",
@@ -821,16 +959,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[ 72,  89],\n",
+       "       [ 69, 657]], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
    "source": [
     "confusion_matrix(y_test, y_predicted_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
