smoting and start of lemma

--- a/project tfidf.ipynb
+++ b/project tfidf.ipynb
@@ -462,20 +462,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "stopwords_list = stopwords.words('english')\n",
-    "stopwords_list += list(string.punctuation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "stops = stopwords.words('english')\n",
-    "stops += list(string.punctuation)"
+    "stops += list(string.punctuation)\n",
+    "stops.extend(['sxsw', 'sxswi', 'quot', 'mention', 'link', 'rt', 'amp', 'http', 'sxswrt', 'google', 'googles', 'app', 'apps', 'android', 'austin', 'quotgoogle', 'new', 'today', 'one', 'apple', 'ipad', 'iphone', 'ipad2', 'apples', 'quotapple'])"
    ]
   },
   {
@@ -533,6 +522,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data['tokens'] = data['tokens'].apply(lambda x: [word.lower() for word in x if word not in stops])\n",
     "data['tokens'] = data['tokens'].apply(lambda x: [word.lower() for word in x if word not in stops])"
    ]
   },
