--- a/project lemma.ipynb
+++ b/project lemma.ipynb
@@ -463,7 +463,19 @@
    "source": [
     "stops = stopwords.words('english')\n",
     "stops += list(string.punctuation)\n",
-    "stops.extend(['sxsw', 'sxswi', 'quot', 'mention', 'link', 'rt', 'amp', 'http', 'sxswrt', 'google', 'googles', 'app', 'apps', 'android', 'austin', 'quotgoogle', 'new', 'today', 'one', 'apple', 'ipad', 'iphone', 'ipad2', 'apples', 'quotapple'])"
+    "stops.extend(['sxsw', 'sxswi', 'quot', 'mention', 'link', 'rt', 'amp', 'http', 'sxswrt', 'google', 'googles', 'app', 'apps', 'android', 'austin', 'quotgoogle', 'new', 'today', 'one', 'apple', 'ipad', 'iphone', 'ipad2', 'apples', 'quotapple', 'store'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = len(data)\n",
+    "data = data.drop_duplicates()\n",
+    "b = len(data)\n",
+    "print('# Number of duplicate rows dropped: {}'.format(a-b))"
    ]
   },
   {
