--- a/project smote tfidf.ipynb
+++ b/project smote tfidf.ipynb
@@ -897,23 +897,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([1.49587381e-03, 4.03937665e-08, 1.73236512e-08, ...,\n",
-       "       8.34704104e-07, 0.00000000e+00, 1.68155561e-04])"
-      ]
+       "             importance\n",
+       "fail           0.017875\n",
+       "headache       0.014798\n",
+       "battery        0.014496\n",
+       "long           0.013630\n",
+       "need           0.011733\n",
+       "...                 ...\n",
+       "pg             0.000000\n",
+       "performance    0.000000\n",
+       "perfectly      0.000000\n",
+       "percentage     0.000000\n",
+       "oooh           0.000000\n",
+       "\n",
+       "[4643 rows x 1 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>importance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>fail</th>\n      <td>0.017875</td>\n    </tr>\n    <tr>\n      <th>headache</th>\n      <td>0.014798</td>\n    </tr>\n    <tr>\n      <th>battery</th>\n      <td>0.014496</td>\n    </tr>\n    <tr>\n      <th>long</th>\n      <td>0.013630</td>\n    </tr>\n    <tr>\n      <th>need</th>\n      <td>0.011733</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>pg</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>performance</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>perfectly</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>percentage</th>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>oooh</th>\n      <td>0.000000</td>\n    </tr>\n  </tbody>\n</table>\n<p>4643 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 60
     }
    ],
    "source": [
-    "rf.feature_importances_"
+    "feature_importances = pd.DataFrame(rf.feature_importances_,\n",
+    "                                   index = tfidf.get_feature_names(),\n",
+    "                                   columns=['importance']).sort_values('importance', ascending=False)\n",
+    "feature_importances.tail(25)\n",
+    "feature_importances"
    ]
   },
   {
