--- a/final modeling.ipynb
+++ b/final modeling.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "source": [
-    "## Here we check out the data. We explore, look for inconsistencies, and use what we see to define our modeling plan. We start with general data cleaning practice, checking for duplicates and missing values. As we get deeper into the data, our techniques get more specific to the data."
+    "### Here we check out the data. We explore, look for inconsistencies, and use what we see to define our modeling plan. We start with general data cleaning practice, checking for duplicates and missing values. As we get deeper into the data, our techniques get more specific to the data."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -229,7 +229,19 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Original dataset values:\n No emotion toward brand or product    5375\nPositive emotion                      2970\nNegative emotion                       569\nI can't tell                           156\nName: feelings, dtype: int64 \n\nEncoded and chosen dataset values:\n 1    2970\n0     569\nName: feelings, dtype: int64 \n\nTotal entries: 3539\n"
+      "Original dataset values:\n",
+      " No emotion toward brand or product    5375\n",
+      "Positive emotion                      2970\n",
+      "Negative emotion                       569\n",
+      "I can't tell                           156\n",
+      "Name: feelings, dtype: int64 \n",
+      "\n",
+      "Encoded and chosen dataset values:\n",
+      " 1    2970\n",
+      "0     569\n",
+      "Name: feelings, dtype: int64 \n",
+      "\n",
+      "Total entries: 3539\n"
      ]
     }
    ],
@@ -260,13 +272,11 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "## Our data is clean and ready to be processed. Now we process. We start by creating tools, then use the tools on the Tweet text to reshape the data into a manageable and meaningful form."
-   ]
+    "### Our data is clean and ready to be processed. Now we process. We start by creating tools, then use the tools on the Tweet text to reshape the data into a manageable and meaningful form."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -346,17 +356,15 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "## It is important that we create functions for each of the modeling steps. We will be selecting which ones to use individually later and they all need to be defined before we know which ones will be used. It is extra important that they all work well individually and also do not interfere with each other."
-   ]
+    "### It is important that we create functions for each of the modeling steps. We will be selecting which ones to use individually later and they all need to be defined before we know which ones will be used. It is extra important that they all work well individually and also do not interfere with each other."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,6 +478,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
     "# Our Modeling System!"
    ],
@@ -477,13 +492,11 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "## We made the choice to create an interactive modeling system. The user will be asked to supply inputs and choose his own path to model the data. First, we choose to Count Vectorize or TF-IDF, whether or not to Lemmatize or to SMOTE. There are 8 possible combinations of choices, each accounted for. We've even processed every combination beforehand to have recommended modeling depending on the user's choices. Modeling is fun again!"
-   ]
+    "### We made the choice to create an interactive modeling system. The user will be asked to supply inputs and choose his own path to model the data. First, we choose to Count Vectorize or TF-IDF, whether or not to Lemmatize or to SMOTE. There are 8 possible combinations of choices, each accounted for. We've even processed every combination beforehand to have recommended modeling depending on the user's choices. Modeling is fun again!"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -505,8 +518,8 @@
     "\n",
     "    # User choices will influence recommended model selection.\n",
     "    log = [[1, 2, 2], [2,2,2]]\n",
-    "    forest = [[1,1,2],[2,1,2],[2,1,1]]\n",
-    "    NB = [[1,2,1],[2,2,1],[1,1,1,]]\n",
+    "    forest = [[1,1,2],[2,1,2]]\n",
+    "    NB = [[1,2,1],[2,2,1],[1,1,1,],[2,1,1]]\n",
     "\n",
     "    # Canned response for every response that isn't '1' or '2.'\n",
     "    jerk = \"Don't waste my time. Try again wiseguy.\"\n",
@@ -608,28 +621,33 @@
       "Type \"1\" to choose or \"2\" to let us.\n",
       "\n",
       "\n",
-      "Multinomial Naive Bayes\n",
+      "\"1\" for Logistic Regression\n",
+      "\"2\" for Random Forest\n",
+      "\"3\" for Multinomial Naive Bayes\n",
+      "\n",
+      "\n",
+      "Logistic Regression Report\n",
       "\n",
       "\n",
       "Classification Report - TEST\n",
       "--------------------------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.46      0.52      0.49       140\n",
-      "           1       0.91      0.88      0.90       745\n",
+      "           0       0.45      0.59      0.51       148\n",
+      "           1       0.91      0.86      0.88       737\n",
       "\n",
-      "    accuracy                           0.83       885\n",
-      "   macro avg       0.68      0.70      0.69       885\n",
-      "weighted avg       0.84      0.83      0.83       885\n",
+      "    accuracy                           0.81       885\n",
+      "   macro avg       0.68      0.72      0.70       885\n",
+      "weighted avg       0.83      0.81      0.82       885\n",
       "\n",
       "--------------------------------------------------------------------------\n",
       "Confusion Matrix - TEST\n",
       "--------------------------------------------------------------------------\n",
       "Predicted    0    1  All\n",
       "True                    \n",
-      "0           73   67  140\n",
-      "1           86  659  745\n",
-      "All        159  726  885\n",
+      "0           87   61  148\n",
+      "1          106  631  737\n",
+      "All        193  692  885\n",
       "--------------------------------------------------------------------------\n"
      ]
     }
@@ -699,11 +717,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Our Favorite Models"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### We took an extremely scientific approach to analyzing our models: Predict, Experiment, Observe, Record the Results. With 3 possible models, a choice of processing the data, a choice to lemmatize and a choice to SMOTE, we end up with 24 (3 x 2 x 2 x 2) unique models. Observing the dataset to be imbalanced in favor of positive sentiments, we decided to focus primarily on the recall of the minority class. In practical terms, we are attempting to identify as many unhappy users of Google and Apple products as we can and prefer to err on the side of classifying extra unhappy users as oppoosed to missing them. \n",
+    "\n",
+    "### We run all 24 models individually and record their most important metrics: Accuracy, Precision, Recall, and F1 Score. Looking at the spreadsheet of results, a few things jump out at us. Excepting several outliers of lower recall, most of our recall scores are in the 0.40 - 0.60 range. Thus, we decided to factor in an overall metric, Accuracy when making our decisions. In each combination we use these metrics to choose our best model. In many categories it was a close decision and could have easily been justified to go in another direction."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![spreadsheet](spreadsheetTop.png)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Our favorite model overall used Term Frequency–Inverse Document Frequency to transform our data, Lemmatization, Smoting, and used Multinomial Naive Bayes to model it. We used all the bells and whistles for our best result. It produced our third highest recall score, and a higher overall accuracy than the two models with higher recall. Again, it was a tough call and other model choices could have been justified just as well."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![spreadsheet](spreadBottom.png)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### As highlighted above, recall was high in this model. The confusion matrix shows 86 correctly identified unhappy users, 51 unhappy users missed, and 126 happy users identified as unhappy. 51 missed users is tied with one other model as the lowest result we found. 126 happy users misidentified as unhappy is high, higher than we would like, but with over 600 correctly identified and a low number of unhappy users missed, we have hit our project target. The goal was to find unhappy users and overall accuracy and we are willing to accept a higher number of incorrectly identified users as long as they are happy. In this scenario, we would use these results to make unhappy users' experience better and the happy users may become even more positive."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
