--- a/NLP-Phase4-PT1.ipynb
+++ b/NLP-Phase4-PT1.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "# Read content. These are a dataset of Tweets from SXSW in Austin from 2011.\n",
     "\n",
-    "data.iloc[0,0]"
+    "data.iloc[0,0]\n"
    ]
   },
   {
