--- a/NLP_Phase4_PT1.ipynb
+++ b/NLP_Phase4_PT1.ipynb
@@ -488,7 +488,7 @@
     "    NB = [[1,2,1],[2,2,1],[1,1,1,],[2,1,1]]\n",
     "    \n",
     "    ################ For Advanced Interface #####################\n",
-    "    print('THE DATA SCIENCE PROCESS! \\nCLEANING AND MODELING\\n')\n",
+    "    print('THE DATA SCIENCE PROCESS! \\nLET\\S MODEL!\\n')\n",
     "    print(\"Let's model our data! Where do you want to begin?\\n\\nType '1' start modeling our data.\\nType '2' if you want to be lazy.\\n\")\n",
     "    lazy = input()\n",
     "    if lazy not in ['1','2']:\n",
@@ -601,14 +601,12 @@
     "\n",
     "    # We run the chosen model and print out metrics for evaluation, along with a confusion matrix.\n",
     "    y_predicted_counts = mod(X_train_counts, y_train, X_test_counts)\n",
-    "    classify(y_test, y_predicted_counts)\n",
-    "\n",
-    "    data = copy"
+    "    classify(y_test, y_predicted_counts)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -616,67 +614,32 @@
      "name": "stdout",
      "text": [
       "THE DATA SCIENCE PROCESS! \n",
-      "CLEANING AND MODELING\n",
+      "LET\\S MODEL!\n",
       "\n",
       "Let's model our data! Where do you want to begin?\n",
       "\n",
       "Type '1' start modeling our data.\n",
       "Type '2' if you want to be lazy.\n",
       "\n",
+      "Don't waste my time. Try again wiseguy.\n",
       "How would you like to analyze the data?\n",
       "\n",
       "Type \"1\" to Count Vectorize or \"2\" to implement TF-IDF.\n",
       "If you don't know the difference, type \"3.\"\n",
       "\n",
-      "\n",
-      "\n",
-      "Count Vectorizing creates a matrix consisting of a count of individual tokens across a single data entry. \n",
-      "Term Frequency-Inverse Document Frequency creates a matrix but assigns each token a weight according to its importance weighted by its frequency across documents.\n",
-      "\n",
-      "How would you like to analyze the data?\n",
-      "\n",
-      "Type \"1\" to Count Vectorize or \"2\" to implement TF-IDF.\n",
-      "If you don't know the difference, type \"3.\"\n",
-      "\n",
-      "\n",
-      "Would you like to lemmatize?\n",
-      "\n",
-      "Type \"1\" for Yes or \"2\" for No.\n",
-      "If you don't know the difference, type \"3\"\n",
-      "\n",
-      "\n",
-      "\n",
-      "Lemmatization transforms a word into its root form: i.e. running, ran, run all become the word run.\n",
-      "\n",
-      "Would you like to lemmatize?\n",
-      "\n",
-      "Type \"1\" for Yes or \"2\" for No.\n",
-      "If you don't know the difference, type \"3\"\n",
-      "\n",
-      "\n",
-      "Would you like to SMOTE?\n",
-      "\n",
-      "Type \"1\" for Yes or \"2\" for No.\n",
-      "If you don't know the difference, type \"3\"\n",
-      "\n",
-      "\n",
-      "[2, 2, 2]\n"
+      "\n"
      ]
     },
     {
      "output_type": "error",
      "ename": "ValueError",
-     "evalue": "empty vocabulary; perhaps the documents only contain stop words",
+     "evalue": "invalid literal for int() with base 10: ''",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-6b136053ef3f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0muser_models\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-19-bf77b0f0e5a7>\u001b[0m in \u001b[0;36muser_models\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    107\u001b[0m         \u001b[0mX_train_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test_counts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCV\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'2'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 109\u001b[1;33m         \u001b[0mX_test_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train_counts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_idf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    110\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    111\u001b[0m     \u001b[1;31m# SMOTE or not.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-11-3f6c9bf4ded9>\u001b[0m in \u001b[0;36mtf_idf\u001b[1;34m(X_train, X_test)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtf_idf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mtfidf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTfidfVectorizer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mX_train_counts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtfidf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mX_test_counts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtfidf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mX_test_counts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_train_counts\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, raw_documents, y)\u001b[0m\n\u001b[0;32m   1839\u001b[0m         \"\"\"\n\u001b[0;32m   1840\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_check_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1841\u001b[1;33m         \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mraw_documents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1842\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_tfidf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1843\u001b[0m         \u001b[1;31m# X is already a transformed view of raw_documents so\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, raw_documents, y)\u001b[0m\n\u001b[0;32m   1196\u001b[0m         \u001b[0mmax_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_features\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1197\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1198\u001b[1;33m         vocabulary, X = self._count_vocab(raw_documents,\n\u001b[0m\u001b[0;32m   1199\u001b[0m                                           self.fixed_vocabulary_)\n\u001b[0;32m   1200\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\feature_extraction\\text.py\u001b[0m in \u001b[0;36m_count_vocab\u001b[1;34m(self, raw_documents, fixed_vocab)\u001b[0m\n\u001b[0;32m   1127\u001b[0m             \u001b[0mvocabulary\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvocabulary\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1128\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mvocabulary\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1129\u001b[1;33m                 raise ValueError(\"empty vocabulary; perhaps the documents only\"\n\u001b[0m\u001b[0;32m   1130\u001b[0m                                  \" contain stop words\")\n\u001b[0;32m   1131\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: empty vocabulary; perhaps the documents only contain stop words"
+      "\u001b[1;32m<ipython-input-20-6b136053ef3f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0muser_models\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-19-125b25e015ed>\u001b[0m in \u001b[0;36muser_models\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'How would you like to analyze the data?\\n\\nType \"1\" to Count Vectorize or \"2\" to implement TF-IDF.\\nIf you don\\'t know the difference, type \"3.\"\\n\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m             \u001b[0mpicks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'3'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -737,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,17 +709,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "                                                   text   brand  feelings  \\\n0     .@wesley83 I have a 3G iPhone. After 3 hrs twe...   Apple         0   \n1     @jessedee Know about @fludapp ? Awesome iPad/i...   Apple         1   \n2     @swonderlin Can not wait for #iPad 2 also. The...   Apple         1   \n3     @sxsw I hope this year's festival isn't as cra...   Apple         0   \n4     @sxtxstate great stuff on Fri #SXSW: Marissa M...  Google         1   \n...                                                 ...     ...       ...   \n9077  @mention your PR guy just convinced me to swit...   Apple         1   \n9079  &quot;papyrus...sort of like the ipad&quot; - ...   Apple         1   \n9080  Diller says Google TV &quot;might be run over ...  Google         0   \n9085  I've always used Camera+ for my iPhone b/c it ...   Apple         1   \n9088                      Ipad everywhere. #SXSW {link}   Apple         1   \n\n                                                 tokens  \n0     wesley83 3g 3 hrs tweeting rise_austin dead ne...  \n1     jessedee know fludapp awesome likely appreciat...  \n2                           swonderlin wait 2 also sale  \n3                        hope year festival crashy year  \n4     sxtxstate great stuff fri marissa mayer tim re...  \n...                                                 ...  \n9077  pr guy convinced switch back great coverage pr...  \n9079                 papyrus sort like nice lol lavelle  \n9080  diller says tv might run playstation xbox esse...  \n9085  always used camera b c image stabilizer mode s...  \n9088                                         everywhere  \n\n[3539 rows x 4 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(data)"
    ]
